XWIKI-22187: Cannot get revisions with a criteria on a document not stored in DB
  * Fix wrong call to toList